--- a/build.gradle
+++ b/build.gradle
@@ -99,7 +99,7 @@ asciidoctor {
 bootWar {
     dependsOn asciidoctor
     copy {
-        from "${asciidoctor.outputDir}/html5"
+        from "${asciidoctor.outputDir}"
         into 'src/main/resources/static/docs'
     }
 }
